--- a/orbit.html
+++ b/orbit.html
@@ -11,6 +11,6 @@
     </head>
 
     <body>
-        <div class="word">Happy 1 year anniversary ♥</div>
+        <div class="word">We reached 1 year ♥</div>
     </body>
 </html>
